# repos-stats-and-evaluation

./: .gitignore  README.md  app.py  download.py  pyproject.toml  python.md  requirements-full.txt  requirements.txt
.github/workflows/: run-tests.yml
input/: repos.example
scripts/: run-format.sh  run-streamlit.sh  run-tests.sh
src/: __init__.py  constants.py  download_repos.py  evaluation.py  file_structure.py  project_eval.py  repo_stats.py  utils.py
tests/: conftest.py  test_edge_cases.py  test_evaluator.py  test_parse_byte.py  test_repostats.py  test_tree_signal.py
