[project]
name = "coding-week"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.44",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]
